--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h1 class="name">Yutai Hou(侯宇泰)</h1>
 			<div class="title">Computer Science PhD</div>
 			<div class="profile">
-				<p>Hi, I am Yutai Hou. I am now a computer science PhD of Harbin Institute of Technology advised by <a href="http://ir.hit.edu.cn/~car/english.htm">Wanxaing Che</a>. My research interest focuses on Natural Language Processing, Dialogue System, Nature Language Generation</p>
+				<p>Hi, I am Yutai Hou. I am now a computer science PhD of Harbin Institute of Technology advised by <a href="http://ir.hit.edu.cn/~car/english.htm">Wanxiang Che</a>. My research interest focuses on Natural Language Processing, Dialogue System, Nature Language Generation</p>
 			</div><!--//profile-->
 		</div><!--//container-->
 	</div><!--//intro-->
@@ -184,7 +184,7 @@
 					<div class="title">2017</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>(DASFAA 2017)</b>  Shi, R., Wang, H., Wang, T., <b>Hou, Y.</b>, & Tang, Y. Similarity Search Combining Query Relaxation and Diversification <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p> 
+					<p><b>(DASFAA 2017)</b>  Shi R., Wang H., Wang T., <b>Hou Y.</b>, & Tang Y. Similarity Search Combining Query Relaxation and Diversification <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p> 
 					<p><b>(IJCNLP 2017)</b>  J Wang, <b>Y Hou</b>, J Liu, Y Cao, CY Lin. A Statistical Framework for Product Description Generation <a href="http://aclweb.org/anthology/I17-2032">[paper]</a></p> 
 				</div><!--//job-desc-->
 			</div><!--//item-->
