--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<li><a class="scrollto" href="#publication-section">Publication</a></li>
 					<li><a class="scrollto" href="#skills-section">Skills</a></li>
 					<li><a class="scrollto" href="#project-section">Project</a></li>
-					<li><a class="scrollto" href="#project-section">Awards</a></li>
+					<li><a class="scrollto" href="#award-section">Awards</a></li>
 					<!-- <li><a class="scrollto" href="#testimonials-section">Testimonials</a></li> -->
 					<!-- <li><a class="scrollto" href="#portfolio-section">Portfolio</a></li> -->
 					<li><a class="scrollto" href="#contact-section">Contact</a></li>
@@ -207,7 +207,7 @@
 		
 	</section><!--//skills-section-->
 	
-	<section id="portfolio-section" class="portfolio-section section">
+	<section id="project-section" class="portfolio-section section">
 		<h2 class="section-title">Projects</h2>
 		<ul id="filters" class="filters clearfix">
 			<li class="type active" data-filter="*">All</li>
