--- a/index.html
+++ b/index.html
@@ -362,8 +362,15 @@
 
 	</section><!--//section-->
 	
-</div><!--//wrapper-->
+	<section id="visitor-section" class="contact-section section">
+		<h2 class="section-title">Recent Visitor</h2>
+		<div class="intro">
+			<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EGAvxIhXf2UZS2x3wQjb96dn7QS03Ctxgnhunhoo9rg"></script>
+		</div><!--//intro-->
 
+	</section><!--//section-->
+	
+</div><!--//wrapper-->
 
 <!-- Javascript -->          
 <script type="text/javascript" src="atma_assets/plugins/jquery-1.12.4.min.js"></script>
