--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 	
 	<section id="visitor-section" class="contact-section section">
 		<h2 class="section-title">Recent Visitor</h2>
-		<div class="intro">
+		<div class="visitor">
 			<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EGAvxIhXf2UZS2x3wQjb96dn7QS03Ctxgnhunhoo9rg"></script>
 		</div><!--//intro-->
 
