--- a/index.html
+++ b/index.html
@@ -358,12 +358,20 @@
 					<li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
 				</ul><!--//social-->
 			</div><!--//diaplog-->
-			<div class="visitor">
-				<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EGAvxIhXf2UZS2x3wQjb96dn7QS03Ctxgnhunhoo9rg"></script>
-			</div>
 		</div><!--//intro-->
+		
+		<div class="visitor">
+			<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EGAvxIhXf2UZS2x3wQjb96dn7QS03Ctxgnhunhoo9rg"></script>
+		</div>
 
 	</section><!--//section-->
+	
+	<!-- <section id="visitor-section" class="contact-section section"> -->
+		<!-- <h2 class="section-title">Recent Visitors</h2> -->
+		<!-- <div class="visitor"> -->
+			<!-- <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EGAvxIhXf2UZS2x3wQjb96dn7QS03Ctxgnhunhoo9rg"></script> -->
+		<!-- </div> -->
+	<!-- </section> -->
 	
 </div><!--//wrapper-->
 
