--- a/index.html
+++ b/index.html
@@ -280,6 +280,14 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
+					<div class="title">2018</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p> National University Internet Application Innovation Competition (3rd)</p> 
+				</div><!--//job-desc-->
+			</div><!--//item-->
+			<div class="item">
+				<div class="job-meta">
 					<div class="title">2017</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
