--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 					<div class="title">2017</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p> Microsoft Intern · Rising Star (Top10%)</p> 
+					<p> Microsoft Research Asia · Stars of Tomorrow Internship Award (Top10%)</p> 
 					<p> HIT Outstanding Graduate </p>
 					<p> Top 100 Graduation Thesis </p>
 				</div><!--//job-desc-->
