update paper and status

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="job-meta">
 					<div class="title">Research Intern</div>
-					<div class="time">2018.6 - Present</div>
+					<div class="time">2018.6 - 2018.10</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
 					<p>Working on research about user simulator and task-oriented dialogue</p> 
@@ -168,14 +168,25 @@
 	</section><!--//section-->
 	
 	<section id="publication-section" class="experiences-section section">
-		<h2 class="section-title">Publication</h2>
+		<h2 class="section-title">Publication and Research Work</h2>
 		<div class="timeline">
+            <div class="item">
+				<div class="job-meta">
+					<div class="title">2019</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p><b>(CCL 2019)</b>  <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="#">[slides]</a> </p>
+					<p><b>Y Hou</b>, Z Zhou, Y Liu, N Wang, W Che, H Liu, T Liu. Few-Shot Sequence Labeling with Label Dependency Transfer and Pair-wise Embedding <a href="https://arxiv.org/abs/1906.08711">[paper]</a> <a href="https://github.com/AtmaHou/FewShotNLU">[code]</a></p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+
 			<div class="item">
 				<div class="job-meta">
 					<div class="title">2018</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>(COLING 2018)</b>  <b>Hou Yutai</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]<a> <a href="#">[slides]</a></p> 
+					<p><b>(COLING 2018)</b> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
+					<p><b>(600+ Stars Repo)</b> <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
