--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="container text-center">
 			<ul class="list-inline">
 				<li class="email"><i class="fa fa-envelope"></i><a href="mailto:ythou@ir.hit.edu.cn">ythou AT ir DOT hit DOT edu DOT cn</a></li>
-				<li><i class="fa fa-phone"></i> <a href="tel: 0123456789">0123 456 7890</a></li>
+				<li><i class="fa fa-phone"></i> <a href="tel: +86 451 86413683">+86-451-86413683</a></li>
 				<li class="website"><i class="fa fa-globe"></i><a href="https://www.linkedin.com/in/yutai-hou-64013b120/" target="_blank">Linkedin Homepage</a></li>
 			</ul>
 		</div><!--//container-->
@@ -175,7 +175,8 @@
 					<div class="title">2019</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>(CCL 2019)</b>  <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="#">[slides]</a> </p>
+					<p> Yuxuan Wang, <b>Yutai Hou</b>, Wanxiang Che, and Ting Liu. Static to Dynamic Word Representations: A Survey <b>(JMLC)</b></p>
+					<p> <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <b>(CCL 2019)</b> <b style="color: red">Best poster</b> <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="attachments/ccl19_poster.pdf">[slides]</a> </p>
 					<p><b>Y Hou</b>, Z Zhou, Y Liu, N Wang, W Che, H Liu, T Liu. Few-Shot Sequence Labeling with Label Dependency Transfer and Pair-wise Embedding <a href="https://arxiv.org/abs/1906.08711">[paper]</a> <a href="https://github.com/AtmaHou/FewShotNLU">[code]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
@@ -185,8 +186,8 @@
 					<div class="title">2018</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>(COLING 2018)</b> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
-					<p><b>(600+ Stars Repo)</b> <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
+					<p> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <b>(COLING 2018)</b> <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
+					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">700+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -195,8 +196,8 @@
 					<div class="title">2017</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>(DASFAA 2017)</b>  Shi R., Wang H., Wang T., <b>Hou Y.</b>, & Tang Y. Similarity Search Combining Query Relaxation and Diversification <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p> 
-					<p><b>(IJCNLP 2017)</b>  J Wang, <b>Y Hou</b>, J Liu, Y Cao, CY Lin. A Statistical Framework for Product Description Generation <a href="http://aclweb.org/anthology/I17-2032">[paper]</a></p> 
+					<p>  Shi R., Wang H., Wang T., <b>Hou Y.</b>, & Tang Y. Similarity Search Combining Query Relaxation and Diversification <b>(DASFAA 2017)</b> <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p>
+					<p>  J Wang, <b>Y Hou</b>, J Liu, Y Cao, CY Lin. A Statistical Framework for Product Description Generation <b>(IJCNLP 2017)</b> <a href="http://aclweb.org/anthology/I17-2032">[paper]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -210,7 +211,7 @@
 		<div class="other-skills">
 			<div class="misc-skills">
 				<span class="skill-tag">Python</span>
-				<span class="skill-tag">C++</span>
+				<span class="skill-tag">Java Scripts</span>
 				<span class="skill-tag">Pytorch</span>
 				<span class="skill-tag">Django</span>
 			</div>
@@ -226,6 +227,27 @@
 			<li class="type" data-filter=".research">Research</li>
 		</ul><!--//filters-->
 		<div class="items-wrapper isotope row">
+			<div class="item research col-md-3 col-xs-6 ">
+				<div class="item-inner">
+					<figure class="figure">
+						<img class="img-responsive" src="atma_assets/images/portfolio/DTP.jpg" alt="" />
+					</figure>
+					<div class="content text-left">
+						<h3 class="sub-title"><a href="#">Dialog Technology Platform</a></h3>
+						<div class="meta">(2018)</div>
+						<div>
+							<b>Brief:</b> A free-open platform for rapid development of Task-oriented chat-bot.
+							<br>
+							<b> Demo & Doc available! </b>
+<!--							<a href="https://www.bilibili.com/video/av17818250">Video Link</a>-->
+							<br>
+							<b>Participation:</b> Project participant.
+						</div>
+						<div class="action"><a href="#"></a></div>
+					</div><!--//content    -->
+					<a class="link-mask" href=http://dtp-cloud.cn/></a>
+				</div><!--//item-inner-->
+			</div><!--//item-->
 			<div class="item engineering col-md-3 col-xs-6 ">
 				<div class="item-inner">
 					<figure class="figure">
@@ -291,10 +313,18 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
+					<div class="title">2019</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p> Best Poster of CCL2019 </p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+			<div class="item">
+				<div class="job-meta">
 					<div class="title">2018</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p> National University Internet Application Innovation Competition (3rd)</p> 
+					<p> National University Internet Application Innovation Competition (3rd)</p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			<div class="item">
