--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@
 	<section id="publication-section" class="experiences-section section">
 		<h2 class="section-title">Publication and Research Work</h2>
 		<div class="timeline">
+			<div class="item">
+				<div class="job-meta">
+					<div class="title">2020</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> </p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+			
+		
             <div class="item">
 				<div class="job-meta">
 					<div class="title">2019</div>
