updated paper file and activities

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 					<li><a class="scrollto" href="#experiences-section">Experiences</a></li>
 					<li><a class="scrollto" href="#eudcation-section">Education</a></li>
 					<li><a class="scrollto" href="#publication-section">Publication</a></li>
+					<li><a class="scrollto" href="#activity-section">Activity</a></li>
 					<li><a class="scrollto" href="#skills-section">Skills</a></li>
 					<li><a class="scrollto" href="#project-section">Project</a></li>
-					<li><a class="scrollto" href="#award-section">Awards</a></li>
+					<li><a class="scrollto" href="#award-section">Honors</a></li>
 					<!-- <li><a class="scrollto" href="#testimonials-section">Testimonials</a></li> -->
 					<!-- <li><a class="scrollto" href="#portfolio-section">Portfolio</a></li> -->
 					<li><a class="scrollto" href="#contact-section">Contact</a></li>
@@ -175,7 +176,7 @@
 					<div class="title">2020</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> </p>
+					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -185,7 +186,7 @@
 					<div class="title">2019</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p> Yuxuan Wang, <b>Yutai Hou</b>, Wanxiang Che, and Ting Liu. Static to Dynamic Word Representations: A Survey <b>(JMLC)</b></p>
+					<p> Yuxuan Wang, <b>Yutai Hou</b>, Wanxiang Che, and Ting Liu. Static to Dynamic Word Representations: A Survey <b>(JMLC)</b><a href="http://ir.hit.edu.cn/~car/papers/icmlc2020-wang.pdf">[paper]</a></p>
 					<p> <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <b>(CCL 2019)</b> <b style="color: red">Best poster</b> <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="attachments/ccl19_poster.pdf">[slides]</a> </p>
 					<p><b>Y Hou</b>, Z Zhou, Y Liu, N Wang, W Che, H Liu, T Liu. Few-Shot Sequence Labeling with Label Dependency Transfer and Pair-wise Embedding <a href="https://arxiv.org/abs/1906.08711">[paper]</a> <a href="https://github.com/AtmaHou/FewShotNLU">[code]</a></p>
 				</div><!--//job-desc-->
@@ -197,7 +198,7 @@
 				</div><!--//job-meta-->
 				<div class="job-desc">
 					<p> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <b>(COLING 2018)</b> <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
-					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">700+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
+					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">800+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -211,6 +212,22 @@
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
+		</div><!--//timeline-->
+		
+	</section><!--//section-->
+	
+	
+	<section id="activity-section" class="experiences-section section">
+		<h2 class="section-title">Activities</h2>
+		<div class="timeline">
+			<div class="item">
+				<div class="job-meta">
+					<div class="title">2020</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p><b>Talk: </b> An Exploration of Few-shot Slot Tagging <a href="attachments/侯宇泰ACL雷锋网直播工作介绍.pdf">[slides]</a> <a href="https://mooc.yanxishe.com/open/course/795">[video]</a></p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
 		</div><!--//timeline-->
 		
 	</section><!--//section-->
@@ -319,7 +336,7 @@
 	
 	
 	<section id="award-section" class="experiences-section section">
-		<h2 class="section-title">Award recieved</h2>
+		<h2 class="section-title">Honors</h2>
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
