--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<div class="title">2020</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a>  <a href="attachments/ACL2020data.zip">[data]</a></p>
+					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a> <a href="https://github.com/AtmaHou/FewShotTagging">[code]</a> <a href="attachments/ACL2020data.zip">[data]</a> <a href="https://slideslive.com/38929212/exploration-on-fewshot-tagging">[video]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
