--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="top-bar container-fluid">
 		<div class="actions">
 			<a class="btn hidden-xs" href="mailto:ythou@ir.hit.edu.cn"><i class="fa fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
-			<a class="btn" href="./Yutai Hou's CV .pdf"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+			<a class="btn" href="attachments/Yutai_Hou's_CV.pdf"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
 		</div><!--//actions-->
 		<ul class="social list-inline">
 			<li><a href="https://www.linkedin.com/in/yutai-hou-64013b120/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
