--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<div class="title">2020</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>Y Hou</b>, Jiafeng Mao, Yongkui Lai, Cheng Chen, Wanxiang Che, Zhigang Chen, Ting Liu. FewJoint: A Few-shot Learning Benchmark for Joint Language Understanding  <b>(EMNLP 2020)</b> <a href="https://arxiv.org/abs/2009.08138">[paper]</a> <a href="https://github.com/AtmaHou/MetaDialog">[code]</a> <a href="attachments/FewJoint.zip">[data]</a></p>
+					<p><b>Y Hou</b>, Jiafeng Mao, Yongkui Lai, Cheng Chen, Wanxiang Che, Zhigang Chen, Ting Liu. FewJoint: A Few-shot Learning Benchmark for Joint Language Understanding  <b>(Preprint 2020)</b> <a href="https://arxiv.org/abs/2009.08138">[paper]</a> <a href="https://github.com/AtmaHou/MetaDialog">[code]</a> <a href="attachments/FewJoint.zip">[data]</a></p>
 					<p>Sanyuan Chen, <b>Y Hou</b>, Yiming Cui, Wanxiang Che, Ting Liu, Xiangzhan Yu. Recall and Learn: Fine-tuning Deep Pretrained Language Models with Less Forgetting.  <b>(EMNLP 2020)</b> <a href="https://arxiv.org/pdf/2004.12651.pdf">[paper]</a> <a href="https://github.com/Sanyuan-Chen/RecAdam">[code]</a> </p>
 					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a> <a href="https://github.com/AtmaHou/FewShotTagging">[code]</a> <a href="attachments/ACL2020data.zip">[data]</a> <a href="attachments/ACL_few_shot_slot_tagging_slides.pdf">[slides]</a><a href="https://slideslive.com/38929212/exploration-on-fewshot-tagging">[video]</a></p>
 				</div><!--//job-desc-->
