--- a/index.html
+++ b/index.html
@@ -173,12 +173,24 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
+					<div class="title">2021</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p><b>Yutai Hou</b>, Sanyuan Chen, Wanxiang Che, Cheng Chen, Ting Liu. C2C-GenDA: Cluster-to-Cluster Generation for Data Augmentation of Slot Filling  <b>(AAAI 2021, CCF A)</b> </p>
+					<p><b>Yutai Hou</b>,  Yongkui Lai, Yushan Wu, Wanxiang Che, Ting Liu. Few-shot Learning for Multi-label Intent Detection <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2010.05256">[paper]</a> </p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+			
+			
+			<div class="item">
+				<div class="job-meta">
 					<div class="title">2020</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>Y Hou</b>, Jiafeng Mao, Yongkui Lai, Cheng Chen, Wanxiang Che, Zhigang Chen, Ting Liu. FewJoint: A Few-shot Learning Benchmark for Joint Language Understanding  <b>(Preprint 2020)</b> <a href="https://arxiv.org/abs/2009.08138">[paper]</a> <a href="https://github.com/AtmaHou/MetaDialog">[code]</a> <a href="attachments/FewJoint.zip">[data]</a></p>
-					<p>Sanyuan Chen, <b>Y Hou</b>, Yiming Cui, Wanxiang Che, Ting Liu, Xiangzhan Yu. Recall and Learn: Fine-tuning Deep Pretrained Language Models with Less Forgetting.  <b>(EMNLP 2020)</b> <a href="https://arxiv.org/pdf/2004.12651.pdf">[paper]</a> <a href="https://github.com/Sanyuan-Chen/RecAdam">[code]</a> </p>
-					<p><b>Y Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a> <a href="https://github.com/AtmaHou/FewShotTagging">[code]</a> <a href="attachments/ACL2020data.zip">[data]</a> <a href="attachments/ACL_few_shot_slot_tagging_slides.pdf">[slides]</a><a href="https://slideslive.com/38929212/exploration-on-fewshot-tagging">[video]</a></p>
+					<p><b>Yutai Hou</b>, Wanxiang Che, Yongkui Lai, Zhihan Zhou, Yijia Liu, Han Liu and Ting Liu. Few-shot Slot Tagging with Collapsed Dependency Transfer and Label-enhanced Task-adaptive Projection Network <b>(ACL 2020, CCF A)</b> <a href="attachments/atma's_acl2020_FewShot.pdf">[paper]</a> <a href="https://github.com/AtmaHou/FewShotTagging">[code]</a> <a href="attachments/ACL2020data.zip">[data]</a> <a href="attachments/ACL_few_shot_slot_tagging_slides.pdf">[slides]</a><a href="https://slideslive.com/38929212/exploration-on-fewshot-tagging">[video]</a></p>
+					<p><b>Yutai Hou</b>, Jiafeng Mao, Yongkui Lai, Cheng Chen, Wanxiang Che, Zhigang Chen, Ting Liu. FewJoint: A Few-shot Learning Benchmark for Joint Language Understanding  <b>(Preprint 2020)</b> <a href="https://arxiv.org/abs/2009.08138">[paper]</a> <a href="https://github.com/AtmaHou/MetaDialog">[code]</a> <a href="attachments/FewJoint.zip">[data]</a></p>
+					<p>Sanyuan Chen, <b>Yutai Hou</b>, Yiming Cui, Wanxiang Che, Ting Liu, Xiangzhan Yu. Recall and Learn: Fine-tuning Deep Pretrained Language Models with Less Forgetting.  <b>(EMNLP 2020, CCF B)</b> <a href="https://arxiv.org/pdf/2004.12651.pdf">[paper]</a> <a href="https://github.com/Sanyuan-Chen/RecAdam">[code]</a> </p>
+					<p><b>Yutai Hou</b>, Yongkui Lai, Wanxiang Che. Meta Dialog Platform: a toolkit platform for NLP Few-Shot Learning <b> (Project) 80+ Stars</b> <a href="https://github.com/AtmaHou/MetaDialog">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -188,9 +200,9 @@
 					<div class="title">2019</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p> Yuxuan Wang, <b>Yutai Hou</b>, Wanxiang Che, and Ting Liu. Static to Dynamic Word Representations: A Survey <b>(JMLC)</b> <a href="http://ir.hit.edu.cn/~car/papers/icmlc2020-wang.pdf">[paper]</a></p>
-					<p> <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <b>(CCL 2019)</b> <b style="color: red">Best poster</b> <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="attachments/ccl19_poster.pdf">[slides]</a> </p>
-					<p><b>Y Hou</b>, Z Zhou, Y Liu, N Wang, W Che, H Liu, T Liu. Few-Shot Sequence Labeling with Label Dependency Transfer and Pair-wise Embedding <a href="https://arxiv.org/abs/1906.08711">[paper]</a> <a href="https://github.com/AtmaHou/FewShotNLU">[code]</a></p>
+					<p> Yuxuan Wang, <b>Yutai Hou</b>, Wanxiang Che, and Ting Liu. Static to Dynamic Word Representations: A Survey <b>(JMLC, SCI IF=3.753)</b> <a href="http://ir.hit.edu.cn/~car/papers/icmlc2020-wang.pdf">[paper]</a></p>
+					<p> <b>Yutai Hou</b>, Meng Fang, Wanxiang Che, and Ting Liu. A Corpus-free State2Seq User Simulator for Task-oriented Dialogue <b>(CCL 2019, EI)</b> <b style="color: red">Best poster</b> <a href="https://arxiv.org/abs/1909.04448">[paper]</a> <a href="https://github.com/AtmaHou/UserSimulator">[code]</a> <a href="attachments/ccl19_poster.pdf">[slides]</a> </p>
+					<p><b>Yutai Hou</b>, Z Zhou, Y Liu, N Wang, W Che, H Liu, T Liu. Few-Shot Sequence Labeling with Label Dependency Transfer and Pair-wise Embedding <a href="https://arxiv.org/abs/1906.08711">[paper]</a> <a href="https://github.com/AtmaHou/FewShotNLU">[code]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 
@@ -199,7 +211,7 @@
 					<div class="title">2018</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <b>(COLING 2018)</b> <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
+					<p> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <b>(COLING 2018, CCF B)</b> <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
 					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">800+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
@@ -209,8 +221,8 @@
 					<div class="title">2017</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p>  Shi R., Wang H., Wang T., <b>Hou Y.</b>, & Tang Y. Similarity Search Combining Query Relaxation and Diversification <b>(DASFAA 2017)</b> <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p>
-					<p>  J Wang, <b>Y Hou</b>, J Liu, Y Cao, CY Lin. A Statistical Framework for Product Description Generation <b>(IJCNLP 2017)</b> <a href="http://aclweb.org/anthology/I17-2032">[paper]</a></p>
+					<p>  Shi R., Wang H., Wang T., <b>Hou Y.</b>, & Tang Y. Similarity Search Combining Query Relaxation and Diversification <b>(DASFAA 2017, CCF B)</b> <a href="https://rd.springer.com/chapter/10.1007/978-3-319-55699-4_5">[paper]</a> </p>
+					<p>  J Wang, <b>Yutai Hou</b>, J Liu, Y Cao, CY Lin. A Statistical Framework for Product Description Generation <b>(IJCNLP 2017)</b> <a href="http://aclweb.org/anthology/I17-2032">[paper]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
