--- a/index.html
+++ b/index.html
@@ -87,7 +87,35 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="work-place">
-					<h3 class="place">Tencent</h3>
+					<h3 class="place">Microsoft Research Asia</h3>
+					<div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Beijing</div>
+				</div>
+				<div class="job-meta">
+					<div class="title">Research Intern</div>
+					<div class="time">2020.9 - Present</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p>Working on Drug discovery with NLP and low-resource ML. | Mentor: Yingce Xia</p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+
+			<div class="item">
+				<div class="work-place">
+					<h3 class="place">Northwestern University (USA) </h3>
+					<div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Evanston</div>
+				</div>
+				<div class="job-meta">
+					<div class="title">Visiting Researcher</div>
+					<div class="time">2019.3 – 2019.6</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p>Working on Meta Learning for few-shot sequence labeling. | Mentor: Han Liu</p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+
+			<div class="item">
+				<div class="work-place">
+					<h3 class="place">Tencent AI Lab</h3>
 					<div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Shen Zhen</div>
 				</div>
 				<div class="job-meta">
@@ -95,17 +123,15 @@
 					<div class="time">2018.6 - 2018.10</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p>Working on research about user simulator and task-oriented dialogue</p> 
-					<ul>
-						<li>Mentor: Meng Fang, Han Liu</li>
-						<li>Tencent AI Lab. RL Group. </li>
-					</ul>
+					<p>Working on low resource task-oriented chat bot. | Mentor: Meng Fang </p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
+
+
 			
 			<div class="item">
 				<div class="work-place">
-					<h3 class="place">Microsoft</h3>
+					<h3 class="place">Microsoft Research Asia</h3>
 					<div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Beijing</div>
 				</div>
 				<div class="job-meta">
@@ -113,11 +139,7 @@
 					<div class="time">2016.7 - 2017.7</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p>Working on research about natural language generation. </p> 
-					<ul>
-						<li>Mentor: Chin-yew Lin</li>
-						<li>Microsoft Research Asia. KC group</li>
-					</ul>
+					<p>Working on Data2Text, e.g generate product description or sport news. | Mentor: Chin-yew Lin</p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
