--- a/index.html
+++ b/index.html
@@ -259,6 +259,46 @@
 			<div class="item research col-md-3 col-xs-6 ">
 				<div class="item-inner">
 					<figure class="figure">
+						<img class="img-responsive" src="atma_assets/images/portfolio/mdp.png" alt="" />
+					</figure>
+					<div class="content text-left">
+						<h3 class="sub-title"><a href="#">Meta Dialog Platform (MDP)</a></h3>
+						<div class="meta">(2020)</div>
+						<div>
+							<b>Brief:</b> A Few-Shot Learning platform for common NLP tasks.
+							<br>
+							<b> 100+ Git Stars. </b>
+<!--							<a href="https://www.bilibili.com/video/av17818250">Video Link</a>-->
+							<br>
+							<b>Participation:</b>Team leader.
+						</div>
+						<div class="action"><a href="#"></a></div>
+					</div><!--//content    -->
+					<a class="link-mask" href=http://dtp-cloud.cn/></a>
+				</div><!--//item-inner-->
+			</div><!--//item-->
+			<div class="item research col-md-3 col-xs-6 ">
+				<div class="item-inner">
+					<figure class="figure">
+						<img class="img-responsive" src="atma_assets/images/portfolio/chatbot.png" alt="" />
+					</figure>
+					<div class="content text-left">
+						<h3 class="sub-title"><a href="#">Few-shot Dialog Understanding</a></h3>
+						<div class="meta">(2019)</div>
+						<div>
+							<b>Brief:</b> Commercial solution for Huawei and CMB bank on few-shot dialogue language understanding
+							<br>
+							<b>Participation:</b> Team leader.
+						</div>
+						<div class="action"><a href="#"></a></div>
+					</div><!--//content    -->
+					<a class="link-mask" href="#"></a>
+<!--					<a class="link-mask" href=http://dtp-cloud.cn/></a>-->
+				</div><!--//item-inner-->
+			</div><!--//item-->
+			<div class="item research col-md-3 col-xs-6 ">
+				<div class="item-inner">
+					<figure class="figure">
 						<img class="img-responsive" src="atma_assets/images/portfolio/DTP.jpg" alt="" />
 					</figure>
 					<div class="content text-left">
@@ -274,7 +314,7 @@
 						</div>
 						<div class="action"><a href="#"></a></div>
 					</div><!--//content    -->
-					<a class="link-mask" href=http://dtp-cloud.cn/></a>
+					<a class="link-mask" href="https://www.bilibili.com/video/av17818250"></a>
 				</div><!--//item-inner-->
 			</div><!--//item-->
 			<div class="item engineering col-md-3 col-xs-6 ">
