--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
 					<div class="title">2021</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
+					<p><b>Yutai Hou</b>, Yongkui Lai, Cheng Chen, Wanxiang Che, Ting Liu. Learning to Bridge Metric Spaces: Few-shot Joint Learning of Intent Detection and Slot Filling  <b>(ACL 2021, Findings, CCF A)</b> </p>
 					<p><b>Yutai Hou</b>, Sanyuan Chen, Wanxiang Che, Cheng Chen, Ting Liu. C2C-GenDA: Cluster-to-Cluster Generation for Data Augmentation of Slot Filling  <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2012.07004">[paper]</a> <a href="https://github.com/Sanyuan-Chen/C2C-DA">[code]</a> </p>
-					<p><b>Yutai Hou</b>,  Yongkui Lai, Yushan Wu, Wanxiang Che, Ting Liu. Few-shot Learning for Multi-label Intent Detection <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2010.05256">[paper]</a> <a href="https://github.com/AtmaHou/FewShotMultiLabel">[code]</a> </p>
+					<p><b>Yutai Hou</b>, Yongkui Lai, Yushan Wu, Wanxiang Che, Ting Liu. Few-shot Learning for Multi-label Intent Detection <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2010.05256">[paper]</a> <a href="https://github.com/AtmaHou/FewShotMultiLabel">[code]</a> </p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
@@ -234,7 +235,7 @@
 				</div><!--//job-meta-->
 				<div class="job-desc">
 					<p> <b>Yutai Hou</b>, Yijia Liu, Wanxiang Che, and Ting Liu. Sequence-to-Sequence Data Augmentation for Dialogue Language Understanding <b>(COLING 2018, CCF B)</b> <a href="https://arxiv.org/abs/1807.01554">[paper]</a> <a href="https://github.com/AtmaHou/Seq2SeqDataAugmentationForLU">[code]</a> <a href="attachments/coling_oral.pdf">[slides]</a></p>
-					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">800+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
+					<p>  <b>Yutai Hou</b>, Wanxiang Che. Task-Oriented Dialogue Dataset Survey <b style="color: red">1000+ Stars</b> <a href="https://github.com/AtmaHou/Task-Oriented-Dialogue-Dataset-Survey">[Link]</a></p>
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
