--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<div class="title">2021</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
-					<p><b>Yutai Hou</b>, Yongkui Lai, Cheng Chen, Wanxiang Che, Ting Liu. Learning to Bridge Metric Spaces: Few-shot Joint Learning of Intent Detection and Slot Filling  <b>(ACL 2021, Findings, CCF A)</b> </p>
+					<p><b>Yutai Hou</b>, Yongkui Lai, Cheng Chen, Wanxiang Che, Ting Liu. Learning to Bridge Metric Spaces: Few-shot Joint Learning of Intent Detection and Slot Filling  <b>(ACL 2021, Findings, CCF A)</b> <a href="attachments/Few-shot Joint Learning.pdf">[paper]</a> </p>
 					<p><b>Yutai Hou</b>, Sanyuan Chen, Wanxiang Che, Cheng Chen, Ting Liu. C2C-GenDA: Cluster-to-Cluster Generation for Data Augmentation of Slot Filling  <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2012.07004">[paper]</a> <a href="https://github.com/Sanyuan-Chen/C2C-DA">[code]</a> </p>
 					<p><b>Yutai Hou</b>, Yongkui Lai, Yushan Wu, Wanxiang Che, Ting Liu. Few-shot Learning for Multi-label Intent Detection <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2010.05256">[paper]</a> <a href="https://github.com/AtmaHou/FewShotMultiLabel">[code]</a> </p>
 				</div><!--//job-desc-->
