--- a/index.html
+++ b/index.html
@@ -195,12 +195,31 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
+					<div class="title">2022</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p><b>Yutai Hou</b>, Cheng Chen, Xianzhen Luo, Bohan Li, Wanxiang Che. Inverse is Better! Fast and Accurate Prompt for Few-shot Slot Tagging <b>(ACL 2022, Findings, CCF A)</b> <a href="https://arxiv.org/abs/2204.00885">[paper]</a> <a href="https://github.com/AtmaHou/PromptSlotTagging">[code]</a></p>
+					<p><b>Yutai Hou</b>, Xinghao Wang, Cheng Chen, Bohan Li, Wanxiang Che, Zhigang Chen. FewJoint: few-shot learning for joint dialogue understanding  <b>(JMLC 2022, ESI, IF=4.38)</b> <a href="https://link.springer.com/article/10.1007/s13042-022-01604-9">[paper]</a>  </p>
+					<p><b>Yutai Hou</b>, Hongyuan Dong, Xinghao Wang, Bohan Li, Wanxiang Che. MetaPrompting: Learning to Learn Better Prompts. <b>(COLING 2022, CCF B)</b> <a href="attachments/MetaPrompting.pdf">[paper]</a></p>
+					<p>Bohan Li, <b>Yutai Hou</b>, Wanxiang Che. Data Augmentation Approaches in Natural Language Processing: A Survey. <b>(OpenAI 2022)</b> <a href=https://www.sciencedirect.com/science/article/pii/S2666651022000080">[paper]</a></p>
+					<p>Yang Xu, <b>Yutai Hou</b>, Wanxiang Che. Language Anisotropic Cross-Lingual Model Editing. <b>(Preprint)</b> <a href=https://arxiv.org/pdf/2205.12677.pdf">[paper]</a></p>
+					
+				</div><!--//job-desc-->
+			</div><!--//item-->
+		
+		
+		
+			<div class="item">
+				<div class="job-meta">
 					<div class="title">2021</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
 					<p><b>Yutai Hou</b>, Yongkui Lai, Cheng Chen, Wanxiang Che, Ting Liu. Learning to Bridge Metric Spaces: Few-shot Joint Learning of Intent Detection and Slot Filling  <b>(ACL 2021, Findings, CCF A)</b> <a href="attachments/Few-shot Joint Learning.pdf">[paper]</a> </p>
 					<p><b>Yutai Hou</b>, Sanyuan Chen, Wanxiang Che, Cheng Chen, Ting Liu. C2C-GenDA: Cluster-to-Cluster Generation for Data Augmentation of Slot Filling  <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2012.07004">[paper]</a> <a href="https://github.com/Sanyuan-Chen/C2C-DA">[code]</a> </p>
 					<p><b>Yutai Hou</b>, Yongkui Lai, Yushan Wu, Wanxiang Che, Ting Liu. Few-shot Learning for Multi-label Intent Detection <b>(AAAI 2021, CCF A)</b> <a href="https://arxiv.org/abs/2010.05256">[paper]</a> <a href="https://github.com/AtmaHou/FewShotMultiLabel">[code]</a> </p>
+					<p><b>Yutai Hou</b>, Yingce Xia, Lijun Wu, Shufang Xie, Yang Fan, Jinhua Zhu, Wanxiang Che, Tao Qin, Tie-Yan Liu. Discovering Drug-Target Interaction Knowledge from Biomedical Literature <b>(preprint)</b> <a href="https://arxiv.org/pdf/2109.13187">[paper]</a> <a href="https://github.com/bert-nmt/BERT-DTI">[code]</a> </p>
+					<p>Yingce Xia, Jinhua Zhu, Lijun Wu, Yang Fan, Shufang Xie, <b>Yutai Hou</b>, Tao Qin. When Transformer Meets Graph Neural Networks <b>(KDD 2021 - OGB-LSC)</b> </p>
+					
 				</div><!--//job-desc-->
 			</div><!--//item-->
 			
