--- a/index.html
+++ b/index.html
@@ -437,6 +437,14 @@
 		<div class="timeline">
 			<div class="item">
 				<div class="job-meta">
+					<div class="title">2021</div>
+				</div><!--//job-meta-->
+				<div class="job-desc">
+					<p> CETC Scholarship </p>
+				</div><!--//job-desc-->
+			</div><!--//item-->
+			<div class="item">
+				<div class="job-meta">
 					<div class="title">2020</div>
 				</div><!--//job-meta-->
 				<div class="job-desc">
