--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				</div><!--//job-meta-->
 				<div class="job-desc">
 					<p><b>Yutai Hou</b>, Cheng Chen, Xianzhen Luo, Bohan Li, Wanxiang Che. Inverse is Better! Fast and Accurate Prompt for Few-shot Slot Tagging <b>(ACL 2022, Findings, CCF A)</b> <a href="https://arxiv.org/abs/2204.00885">[paper]</a> <a href="https://github.com/AtmaHou/PromptSlotTagging">[code]</a></p>
-					<p><b>Yutai Hou</b>, Xinghao Wang, Cheng Chen, Bohan Li, Wanxiang Che, Zhigang Chen. FewJoint: few-shot learning for joint dialogue understanding  <b>(JMLC 2022, ESI, IF=4.38)</b> <a href="https://link.springer.com/article/10.1007/s13042-022-01604-9">[paper]</a>  </p>
+					<p><b>Yutai Hou</b>, Xinghao Wang, Cheng Chen, Bohan Li, Wanxiang Che, Zhigang Chen. FewJoint: few-shot learning for joint dialogue understanding  <b>(IJMLC 2022, ESI, IF=4.38)</b> <a href="https://link.springer.com/article/10.1007/s13042-022-01604-9">[paper]</a>  </p>
 					<p><b>Yutai Hou</b>, Hongyuan Dong, Xinghao Wang, Bohan Li, Wanxiang Che. MetaPrompting: Learning to Learn Better Prompts. <b>(COLING 2022, CCF B)</b> <a href="attachments/MetaPrompting.pdf">[paper]</a></p>
 					<p>Bohan Li, <b>Yutai Hou</b>, Wanxiang Che. Data Augmentation Approaches in Natural Language Processing: A Survey. <b>(OpenAI 2022)</b> <a href=https://www.sciencedirect.com/science/article/pii/S2666651022000080">[paper]</a></p>
 					<p>Yang Xu, <b>Yutai Hou</b>, Wanxiang Che. Language Anisotropic Cross-Lingual Model Editing. <b>(Preprint)</b> <a href=https://arxiv.org/pdf/2205.12677.pdf">[paper]</a></p>
